<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>io.github.oneteme.traceapi</groupId>
	<artifactId>traceapi-server</artifactId>
	<version>0.0.4-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>traceapi-server</name>
	<description>traceapi-server</description>
	<url>https://oneteme.github.io/</url>
	<developers>
		<developer>
			<name>u$f</name>
			<email>usf.alami@gmail.com</email>
			<organization>JARVIS</organization>
			<organizationUrl>https://oneteme.github.io/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/oneteme/traceapi-server</url>
	</scm>
	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>https://github.com/oneteme/traceapi-server/blob/main/LICENSE</url>
		</license>
	</licenses>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
	</parent>
	<properties>
		<java.version>17</java.version>
		<sonar.organization>jarvis</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.github.oneteme.traceapi</groupId>
			<artifactId>traceapi-core</artifactId>
			<version>0.0.21</version>
		</dependency>
		<dependency>
			<groupId>io.github.oneteme</groupId>
			<artifactId>jquery</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	
	<repositories>
		<repository>
			<id>ossrh</id>
			<name>ossrh</name>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

</project>
